--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "reactflow": "^11.3.3",
     "tailwind-merge": "^1.8.0",
     "use-undoable": "^3.3.11",
+    "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0",
     "vite-tsconfig-paths": "^4.0.3",
     "zod": "^3.20.2"
