--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.2.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "focus-trap-react": "^10.0.2",
     "localforage": "^1.10.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
