--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/plus-jakarta-sans": "^4.5.10",
     "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-alert-dialog": "^1.0.2",
+    "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-context-menu": "^2.1.0",
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.2",
@@ -31,6 +32,7 @@
     "react-hot-toast": "^2.4.0",
     "reactflow": "^11.3.3",
     "tailwind-merge": "^1.8.0",
+    "tailwindcss-radix": "^2.6.1",
     "use-undoable": "^3.3.11",
     "usehooks-ts": "^2.9.1",
     "uuid": "^9.0.0",
