--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "focus-trap-react": "^10.0.2",
+    "html-to-image": "^1.11.3",
     "localforage": "^1.10.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
