feat: add UX improvement - Auto fit view on export image - Set focus to header instead of Add Table button after creation - Add create table shortcut - Improve form validation and parsing

--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "axios": "^1.2.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "focus-trap-react": "^10.0.2",
     "html-to-image": "^1.11.3",
     "localforage": "^1.10.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-focus-lock": "^2.9.2",
     "react-hook-form": "^7.41.0",
     "react-hot-toast": "^2.4.0",
     "reactflow": "^11.3.3",
