--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
     "reactflow": "^11.3.3",
     "tailwind-merge": "^1.8.0",
     "tailwindcss-radix": "^2.6.1",
+    "universal-base64url": "^1.1.0",
     "use-undoable": "^3.3.11",
     "usehooks-ts": "^2.9.1",
-    "uuid": "^9.0.0",
     "vite-tsconfig-paths": "^4.0.3",
     "zod": "^3.20.2"
   },
