--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "format": "prettier --write src"
+    "format": "prettier --write src",
+    "cy:run": "cypress run"
   },
   "dependencies": {
     "@fontsource/fira-code": "^4.5.12",
@@ -42,11 +43,14 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@testing-library/cypress": "^9.0.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/uuid": "^9.0.0",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.2.0",
+    "cypress-real-events": "^1.7.6",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prettier-config-airbnb": "^1.0.0",
