--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "format": "prettier --write src",
-    "cy:run": "cypress run",
+    "cy:run": "cypress run --config video=false",
     "cy:open": "cypress open"
   },
   "dependencies": {
