--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
     "@tanstack/react-router": "^0.0.1-beta.38",
+    "@xstate/react": "^3.0.1",
     "axios": "^1.2.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
@@ -42,6 +43,7 @@
     "use-undoable": "^3.3.11",
     "usehooks-ts": "^2.9.1",
     "vite-tsconfig-paths": "^4.0.3",
+    "xstate": "^4.35.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
@@ -52,7 +54,7 @@
     "@types/uuid": "^9.0.0",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
-    "cypress": "^12.2.0",
+    "cypress": "^12.3.0",
     "cypress-real-events": "^1.7.6",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
