--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "cy:open": "cypress open"
   },
   "dependencies": {
-    "@fontsource/fira-code": "^4.5.12",
-    "@fontsource/plus-jakarta-sans": "^4.5.10",
+    "@fontsource/inter": "^4.5.14",
+    "@heroicons/react": "^2.0.13",
     "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-alert-dialog": "^1.0.2",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-context-menu": "^2.1.0",
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-separator": "^1.0.1",
     "@radix-ui/react-tooltip": "^1.0.2",
     "@tanstack/react-query": "^4.20.4",
     "@tanstack/react-query-devtools": "^4.20.4",
