--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cy:open": "cypress open"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.7",
+    "@dnd-kit/sortable": "^7.0.2",
     "@fontsource/inter": "^4.5.14",
     "@heroicons/react": "^2.0.13",
     "@hookform/resolvers": "^2.9.10",
@@ -32,9 +34,6 @@
     "localforage": "^1.10.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-focus-lock": "^2.9.2",
     "react-hook-form": "^7.41.0",
@@ -54,7 +53,6 @@
     "@tailwindcss/forms": "^0.5.3",
     "@testing-library/cypress": "^9.0.0",
     "@types/react": "^18.0.26",
-    "@types/react-beautiful-dnd": "^13.1.3",
     "@types/react-dom": "^18.0.9",
     "@types/uuid": "^9.0.0",
     "@vitejs/plugin-react": "^3.0.0",
