--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "prettier-config-airbnb": "^1.0.0",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "tailwindcss": "^3.2.4",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
